# dictatux

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG  Dockerfile.dev-tools  INSTALL.md  README.md  TODO.md  compile_resources.sh  compile_translations.sh  context.md  dictatux.desktop  dictatux.pro  pyproject.toml  setup.cfg  setup.py  update_translations.sh
.github/workflows/: ci.yml  pytest.yml  release.yml
REQs/: REQ-stt-transcription-tests-2026-03-11.md
dictatux/: __main__.py  advanced.py  audio_pipeline.py  audio_recorder.py  base_controller.py  cli.py  dialogs.py  dictatux.py  dictatux.qrc  dictatux_rc.py  engine_manager.py  engine_names.py  engine_plugin.py  general_settings.py  icon_factory.py  inference_backend.py  ipc_dbus.py  ipc_localsocket.py  ipc_manager.py  languages.py  model_repository.py  partial_handler.py  pidfile.py  settings.py  state_machine.py  status.py  streaming_runner_base.py  stt_engine.py  stt_factory.py  text_formatter.py  threaded_runner.py  tray_icon.py  ui_generator.py  utils.py  vad_processor.py  validators.py
tests/: helpers.py  test_advanced_dialog_dynamic.py  test_audio_buffer.py  test_audio_detection_logging.py  test_audio_recorder.py  test_base_settings.py  test_cli.py  test_device_persistence.py  test_dialogs.py  test_dynamic_ui.py  test_engine_manager.py  test_engine_settings_metadata.py  test_engine_settings_registry.py  test_engine_status_strings.py  test_general_settings.py  test_inference_backend.py  test_integration.py  test_integration_workflows.py  test_ipc_dbus_shortcuts.py  test_main.py  test_model_repository.py  test_partial_handler.py  test_settings.py  test_state_machine.py  test_streaming_controller_base.py  test_stt_interface_refactoring.py  test_text_formatter.py  test_threaded_runner.py  test_tray_icon.py  test_ui_generator.py  test_vad_processor.py  test_validators.py  test_vosk_backend.py  test_vosk_settings_integration.py  test_wer.py
(+44 files in other folders)
