[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "Dictatux"
version = "0.1.0"
description = "Multi-engine voice recognition utility for Linux"
authors = [
    {name = "Pablo Caro", email = "correo@pablocaro.es"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "ujson",
    "PySide6",
    "vosk",
    "pyaudio",
    "requests",
    "google-cloud-speech",
    "websocket-client",
]

[project.optional-dependencies]
# Vosk Local - Lightweight, CPU-only
local_stt = [
    "vosk>=0.3.45",
    "webrtcvad-wheels>=2.0.11",
    "setuptools",
    "psutil",
]

# Vosk Local with CUDA (GPU acceleration)
local_stt_cuda = [
    "vosk>=0.3.45",
    "silero-vad>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "webrtcvad-wheels>=2.0.11",
    "setuptools",
    "psutil",
]

# Whisper Local - CPU-only (install torch CPU separately)
whisper_local = [
    "faster-whisper>=1.0.0",
    "silero-vad>=4.0.0",
    "numpy",
]

# Whisper Local with CUDA support (includes torch with CUDA)
whisper_local_cuda = [
    "faster-whisper>=1.0.0",
    "silero-vad>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy",
]

# All STT engines (uses CUDA versions)
all = [
    "vosk>=0.3.45",
    "silero-vad>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "webrtcvad-wheels>=2.0.11",
    "setuptools",
    "psutil",
    "faster-whisper>=1.0.0",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/pcaro/dictatux/"

[project.scripts]
dictatux = "dictatux.dictatux:main"

[tool.setuptools]
packages = ["dictatux", "dictatux.translations"]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-qt>=4.2.0",
    "numpy",
]
